# E_Commerce_Store

./: .gitignore  CMakeLists.txt  HashTable.c  README.md  main.c  store.c  store.h
clients/: Customer.c  Customer.h  RegularClient.c  RegularClient.h  Shop.c  Shop.h
hash_table/: HashTable.c  HashTable.h
server/: server.c  server.h  store.c  store.h
sever/: store.c
util/: Failure.c
util/client_utilities/: ClientUtilities.c  ClientUtilities.h
util/exception_handling/: Failure.c  Failure.h
util/queue/: Queue.c  Queue.h
util/random_utilities/: CommunicationProtocol.c  CommunicationProtocol.h  RandomUtilities.c  RandomUtilities.h
util/server_utilities/: ServerUtilities.c  ServerUtilities.h
